<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="#fffafafa" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginStart="12.0dip" android:layout_marginEnd="12.0dip">
        <TextView android:textSize="15.0dip" android:textColor="#ff252525" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/open_source_license_announcement_title" android:lineSpacingExtra="9.0dip" android:fontFamily="@font/samsungone_500_normal" />
        <TextView android:textSize="15.0dip" android:textColor="#ff252525" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/open_source_license_announcement_body" android:lineSpacingExtra="9.0dip" android:fontFamily="@font/samsungone_500_normal" />
        <TextView android:textSize="15.0dip" android:textColor="#ff252525" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/open_source_license_apache" android:lineSpacingExtra="9.0dip" android:fontFamily="@font/samsungone_500_normal" />
        <TextView android:textSize="15.0dip" android:textColor="#ff252525" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/open_source_license_bsd" android:lineSpacingExtra="9.0dip" android:fontFamily="@font/samsungone_500_normal" />
    </LinearLayout>
</ScrollView>