<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="end|center" android:orientation="vertical" android:id="@id/cancel_ok_buttons_layout" android:layout_width="fill_parent" android:layout_height="124.0dip" android:paddingStart="9.0dip" android:paddingEnd="9.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.samsung.android.shealthmonitor.widget.HTextButton android:id="@id/negative_button" android:text="@string/baseui_button_cancel" app:allowDefaultButtonShape="true" app:button_type="dialog_action_button" style="@style/baseui_dialog_vertical_3_button_style" />
    <com.samsung.android.shealthmonitor.widget.HTextButton android:id="@id/neutral_button" android:text="@string/tracker_sensor_common_discard_abbr" app:allowDefaultButtonShape="true" app:button_type="dialog_action_button" style="@style/baseui_dialog_vertical_3_button_style" />
    <com.samsung.android.shealthmonitor.widget.HTextButton android:id="@id/positive_button" android:text="@string/baseui_button_save" app:allowDefaultButtonShape="true" app:button_type="dialog_action_button" style="@style/baseui_dialog_vertical_3_button_style" />
</LinearLayout>